Issue 31 decouple counter (#61)
* Removing check of counter multiplicity of 16. Checking roughly is counter lower than 2^63.
* Clearing up whitespace
* Code reformat
* Moved secret type above secret input field. Set same tooltip text to secret input field as in label
* Correct strings for user

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -242,6 +242,13 @@
               <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
              </property>
              <item row="1" column="0">
+              <widget class="QLabel" name="label_4">
+               <property name="text">
+                <string>Input format:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
               <widget class="QLabel" name="label_3">
                <property name="toolTip">
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The secret is provided by your service provider you may want to login or can be configured in your local application which you may want to login to.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -251,10 +258,13 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
+             <item row="2" column="1">
               <layout class="QVBoxLayout" name="verticalLayout_6">
                <item>
                 <widget class="QLineEdit" name="secretEdit">
+                 <property name="toolTip">
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The secret is provided by your service provider you may want to login or can be configured in your local application which you may want to login to.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                 </property>
                  <property name="inputMask">
                   <string/>
                  </property>
@@ -332,14 +342,7 @@
                </item>
               </layout>
              </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="label_4">
-               <property name="text">
-                <string>Input format:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="1">
+             <item row="1" column="1">
               <layout class="QHBoxLayout" name="horizontalLayout_6">
                <item>
                 <widget class="QRadioButton" name="base32RadioButton">
@@ -453,10 +456,10 @@
                     <string/>
                    </property>
                    <property name="text">
-                    <string>00000000</string>
+                    <string>00000000000000000000</string>
                    </property>
                    <property name="maxLength">
-                    <number>8</number>
+                    <number>20</number>
                    </property>
                   </widget>
                  </item>
