Show available password retry count in change password form (#65). About dialog does show current retry counts (#66)
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/ui/stick20changepassworddialog.ui
+++ b/ui/stick20changepassworddialog.ui
@@ -131,6 +131,24 @@
     </widget>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="retryCountLabel">
+       <property name="text">
+        <string>Retry count left:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="retryCount">
+       <property name="text">
+        <string notr="true">3</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
