Show information about PWS accepting UTF8 chars
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -1293,6 +1293,16 @@
          </widget>
         </item>
         <item>
+         <widget class="QLabel" name="l_utf8_info">
+          <property name="text">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Password Safe fields support UTF8 data. It means that you can use your national characters here. Please remember however that non-English characters could take more space (up to 4 characters). The counters next to each field are to inform how much more standard English characters can given field accept.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer_9">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
