Add QT linguist french translation files

--- a/resources.qrc
+++ b/resources.qrc
@@ -16,6 +16,7 @@
         <file alias="nitrokey_de_DE.qm">i18n/nitrokey_de_DE.qm</file>
         <file alias="nitrokey_en.qm">i18n/nitrokey_en.qm</file>
         <file alias="nitrokey_arabic.qm">i18n/nitrokey_arabic.qm</file>
+        <file alias="nitrokey_fr.qm">i18n/nitrokey_fr.qm</file>
     </qresource>
     <qresource prefix="/license">
         <file alias="General">3RDPARTY.txt</file>
